--- a/build.yaml
+++ b/build.yaml
@@ -20,4 +20,6 @@
 ---
 include:
   - board: nice_nano
-    shield: nice_view
+    shield: nice_view_left nice_view_adapter nice_view
+  - board: nice_nano
+    shield: nice_view_right nice_view_adapter nice_view
