--- a/config/nice_view.conf
+++ b/config/nice_view.conf
@@ -2,3 +2,7 @@
 CONFIG_ZMK_DISPLAY=y
 # Disable idle blanking
 CONFIG_ZMK_DISPLAY_BLANK_ON_IDLE=n
+
+CONFIG_BT_CTRL_TX_PWR_PLUS_8=y
+
+CONFIG_ZMK_KEYBOARD_NAME="Mercy"
